<resources>
    <string name="app_name">OnlineShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="shop_fragment">Shop</string>
    <string name="category_fragment">Category</string>
    <string name="basket_fragment">Basket</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="account_fragment">Account</string>
    <string name="action_favorite">Favorite</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="see_more">See more</string>
    <string name="mega_sale">Mega Sale</string>
    <string name="total_price">Total Price</string>
</resources>