<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.shop.ShopFragment">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.ActionBar.Solid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:contentInsetStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="search"
                app:endIconMode="clear_text"
                app:startIconContentDescription="search">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable Content Section -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--        Promotion Section    -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vp_discount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:src="@drawable/table_with_food"
                        android:id="@+id/iv_discount_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_discount_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="Armalite AR-15" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_discount_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_discount_name"
                        android:layout_alignStart="@+id/tv_discount_name"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="50% Off" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_discount_time_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_discount_percentage"
                        android:layout_alignStart="@+id/tv_discount_percentage"
                        android:layout_marginTop="28dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="08" />

                    <ImageView
                        android:id="@+id/iv_discount_dot_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_discount_time_hour"
                        android:layout_alignBottom="@+id/tv_discount_time_hour"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/tv_discount_time_hour" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_discount_time_minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_discount_time_hour"
                        android:layout_alignBottom="@+id/tv_discount_time_hour"
                        android:layout_toEndOf="@+id/iv_discount_dot_1"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="34" />

                    <ImageView
                        android:id="@+id/iv_discount_dot_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_discount_time_hour"
                        android:layout_alignBottom="@+id/tv_discount_time_hour"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/tv_discount_time_minute" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_discount_time_seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_discount_time_hour"
                        android:layout_alignBottom="@+id/tv_discount_time_hour"
                        android:layout_toEndOf="@+id/iv_discount_dot_2"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="34" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/into_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vp_discount"
                android:layout_gravity="bottom"
                app:tabBackground="@drawable/tab_pager_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />


            <!--        Promotion Section ENDS   -->

            <!--        Category Section    -->

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_fragment"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_category_list_item" />

            <!--        Flash Sales Section    -->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_flash_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flash_sale"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_see_more_flash_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/see_more"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_flash_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_food_item" />

            <!--        Mega Sale Section    -->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mega_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mega_sale"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_see_more_mega_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/see_more"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mega_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_food_item" />

            <!--        Recommended Section    -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_promotion_image"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:id="@+id/tv_recommended_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Recommended Product"
                    android:maxLines="2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="150dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="45dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/tv_recommended_title_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_recommended_title"
                    android:layout_alignStart="@+id/tv_recommended_title"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:textSize="12sp"
                    tools:text="We recommend the best for you" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="3"
                tools:itemCount="4"
                tools:listitem="@layout/layout_food_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>